--- a/components/event-monitor/event-tracer/org.wso2.carbon.event.tracer.ui/pom.xml
+++ b/components/event-monitor/event-tracer/org.wso2.carbon.event.tracer.ui/pom.xml
@@ -48,6 +48,10 @@
             <groupId>org.wso2.carbon.analytics-common</groupId>
             <artifactId>org.wso2.carbon.event.tracer.stub</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.orbit.org.owasp.encoder</groupId>
+            <artifactId>encoder</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
