--- a/features/event-monitor/event-tracer/org.wso2.carbon.event.tracer.ui.feature/pom.xml
+++ b/features/event-monitor/event-tracer/org.wso2.carbon.event.tracer.ui.feature/pom.xml
@@ -43,6 +43,10 @@
                 <groupId>org.wso2.carbon.analytics-common</groupId>
                 <artifactId>org.wso2.carbon.event.tracer.stub</artifactId>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.org.owasp.encoder</groupId>
+                <artifactId>encoder</artifactId>
+            </dependency>
         </dependencies>
     
     <build>
@@ -74,6 +78,7 @@
                                 </bundleDef>
                                 <bundleDef>org.wso2.carbon.analytics-common:org.wso2.carbon.event.tracer.stub:${carbon.analytics.common.version}
                                 </bundleDef>
+                                <bundleDef>org.wso2.orbit.org.owasp.encoder:encoder:${encoder.wso2.version}</bundleDef>
                             </bundles>
                         </configuration>
                     </execution>
